# vending-auto-setup

./: .gitignore  AGENTS.md  README.md  TODO.md  context.md  pyproject.toml
.agents/patterns/: duplicate-field-pattern.md
.agents/skills/commit-change/: SKILL.md
.agents/skills/refactor-react/: SKILL.md
.claude/agents/: backend-builder.md  spec-writer.md  story-writer.md
.claude/commands/: commit-change.md
.claude/skills/commit-change/: SKILL.md
.claude/skills/refactor-react/: SKILL.md
.codex/agents/: codebase-researcher.md  frontend-builder.md  pr-reviewer.md  test-verifier.md
docs/: research.md
scripts/: install.sh
src/: audit_log.py  cli.py  config.py  display.py  installers.py  os_info.py  reset.py  runner.py  server.py  server_service.py  status.py  system.py  wireguard.py
src/vending_auto_setup/: __init__.py  __main__.py  cli.py  display.py  installers.py  status.py  system.py  wireguard.py
src/web/static/: app.css
src/web/templates/: _command_list.html  base.html  command_docs.html  commands.html  dashboard.html  display.html  logs.html  wireguard.html
tests/: test_audit_log.py  test_cli.py  test_display.py  test_server.py  test_status.py  test_wireguard.py
